--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "install": "^0.13.0",
     "json-parser": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^3.5.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
